// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiColumnMainContent renders 1`] = `
<div>
  <div>
    <div
      class="B-ui-dhancha_multi-column-main-content"
    >
      Hello
    </div>
  </div>
</div>
`;

exports[`renders 1`] = `
<div>
  <div>
    <div
      class="B-ui-dhancha_container BU_widescreen"
    >
      <div
        aria-label="Activity Bar"
        class="B-ui-dhancha_activitybar BU_widescreen"
        role="navigation"
      >
        <div>
          Activitybar
        </div>
      </div>
      <header
        class="B-ui-dhancha_ws-sidebar"
      >
        <div>
          Workspace sidebar
        </div>
      </header>
      <main
        class="B-ui-dhancha_main-content BU_widescreen"
      >
        <div>
          Main content
        </div>
      </main>
      <aside
        class="B-ui-dhancha_note-sidebar"
      >
        <div>
          Note sidebar
        </div>
      </aside>
    </div>
  </div>
</div>
`;

exports[`renders when widescreen=false 1`] = `
<div>
  <div>
    <div
      class="B-ui-dhancha_container"
    >
      <div
        aria-label="Activity Bar"
        class="B-ui-dhancha_activitybar"
        role="navigation"
      >
        <div>
          Activitybar
        </div>
      </div>
      <div>
        Note sidebar
      </div>
    </div>
  </div>
</div>
`;
